deployment/4-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: parental-backend-service
  namespace: parental
  labels:
    app: parental
    side: backend
spec:
  type: ClusterIP
  selector:
    app: parental
    side: backend
  ports:
    - name: http
      port: 65000
      protocol: TCP
      targetPort: 65000
